--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
               text-decoration: none;
               font-weight: bold;
             "
-            href="SignUp.html"
+            href="signup.html"
             >Create One !!</a
           >
         </p>
