--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
           <div class="info"><a href="tailoring-info.html" style="color:rgb(0, 200, 255); font-weight:900">More Info</a></div>
         </div>
         <div class="swiper-slide">
-          <img src="img/dance.jpg" alt="" />
+          <img src="img/Dance.jpg" alt="" />
           <div class="centered">Dance</div>
           <div class="info"><a href="dance-info.html" style="color:rgb(0, 200, 255); font-weight:900">More Info</a></div>
         </div>
@@ -638,7 +638,7 @@
               <h4 style="margin-left:5px;color:Black;"><strong>Tailoring</strong></h4>
             </div>
             <div class="col-md-2">
-              <a href="dance-info.html"><img src="img/dance.png" style="height:150px; width:150px;"></a>
+              <a href="dance-info.html"><img src="img/Dance.png" style="height:150px; width:150px;"></a>
               <h4 style="margin-left:5px;color:Black;"><strong>Dance</strong></h4>
             </div>
             <div class="col-md-2">
@@ -646,7 +646,7 @@
               <h4 style="margin-left:5px;color:Black;"><strong>Music</strong></h4>
             </div>
             <div class="col-md-2">
-              <a href="#"><img src="img/merchandise.png"style="height:150px; width:150px;"></a>
+              <a href="#"><img src="img/Merchandise.png"style="height:150px; width:150px;"></a>
               <h4 style="margin-left:5px;color:Black;"><strong>Merchandise</strong></h4>
             </div>
             <div class="col-md-2">
