--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SignUp - ConnectLocal</title>
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script type="module" src="SignUp.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
@@ -62,7 +62,7 @@
       <button style="margin-top: 100px;" id="submit" name="submit" type="submit">Create Account</button>
 
       <div style="margin-top: 50px;" class="form">
-        <p>Already have an account? <a style="color: rgb(0, 174, 255);text-decoration: none;font-weight: bold;" href="Login.html">LogIn</a></p>
+        <p>Already have an account? <a style="color: rgb(0, 174, 255);text-decoration: none;font-weight: bold;" href="login.html">LogIn</a></p>
       </div>
     </form>
     <script>
