--- a/index.html
+++ b/index.html
@@ -673,25 +673,14 @@
 </footer>
 
 <script>
-  function loginUser(email) {
-  localStorage.setItem("isLoggedIn", "true");
-  localStorage.setItem("userEmail", email); // Optional: store email
-}
   document.addEventListener("DOMContentLoaded", function () {
-    // Check if the user is logged in
-    const isLoggedIn = localStorage.getItem("isLoggedIn") === "true";
-
-    // If not logged in, redirect to the login page
-    if (!isLoggedIn) {
-      window.location.href = "login.html";
-    }
+    firebase.auth().onAuthStateChanged(function (user) {
+      if (!user) {
+        // No user is signed in, redirect to login page
+        window.location.href = "login.html";
+      }
+    });
   });
-  function logoutUser() {
-  localStorage.removeItem("isLoggedIn");
-  localStorage.removeItem("userEmail");
-  window.location.href = "login.html"; // Redirect to login page
-}
-
 </script>
 
     
