--- a/login.html
+++ b/login.html
@@ -128,5 +128,7 @@
         });
       });
     </script>
+<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js"></script>
   </body>
 </html>
